--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,12 @@
 server:
   port: 8081
-socket-server:
-  port: 8086
-  host: localhost
 
 spring:
   # JDBC properties
   datasource:
     url: jdbc:postgresql://localhost:5432/gudra
-    username: hoanglam
-    password: hoanglam
+    username: postgres
+    password: Minhquan2903
 
   application:
     name=jwt-security:
